--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
               <div class="skills-wrapper row show">
                 <div class="skill">
                   <h4 class="skill-title display-4 mb-5">HTML&CSS</h4>
-                  <div class="skill-img mb-5"><img src="./portfolio/code (2).png" alt=""></div>
+                  <div class="skill-img mb-5"><img src="./portfolio/html (2).png" alt=""></div>
                   <p class="skill-text">Web制作をBootstrapでも行えます。Web Designは只今勉強中です。</p>
                 </div>
                 <div class="skill">
@@ -150,7 +150,7 @@
                 </div>
                 <div class="skill">
                   <h4 class="skill-title display-4 mb-5">ExcelVBA</h4>
-                  <div class="skill-img mb-5"><img src="./portfolio/excel.png" alt=""></div>
+                  <div class="skill-img mb-5"><img src="./portfolio/excel (3).png" alt=""></div>
                   <p class="skill-text">Excelでの事務作業を自動化・効率化致します。<br>
                                       また、ExcelVBAというExcelのプログラミング言語でも幅広く対応いたします。
                   </p>
