--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 <div class="work-wrapper">
                   <div class="work work1 show">
                     <div class="image-work">
-                   <img src="./portfolio/isara3-2.png" alt="">
+                   <img src="./portfolio/Isara3-2.png" alt="">
                   </div>
                   <div class="work-name  ml-0 pr-5">
                     <p class=" work-text work-line-1">Isara <span> (模写)</span></p> 
