--- a/index.html
+++ b/index.html
@@ -277,14 +277,14 @@
             </div>
           </div>
           <div class="form-wrapper show">
-          <form action="" method="POST" id="form" >
+          <form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLScGOJPxtKPt_JdhbS-zqbPneDGJTMH_KGDTlmzdekzwxtV37g/formResponse" method="POST" id="form" >
 
             <label for="name">Name    </label>
-            <input type="text" name="name" placeholder="Name" required="true"><br>
+            <input type="text" name="entry.22944249" placeholder="Name" required="true"><br>
             <label for="email">e-mail  </label>
-            <input type="email" name="email" id="email" required="true" placeholder="e-mail"><br>
+            <input type="email" name="emailAddress" id="email" required="true" placeholder="e-mail"><br>
             <label for="text">Subject</label>
-            <textarea name="text" id="text" cols="30" rows="6" placeholder="Subject"></textarea>
+            <textarea name="entry.106218465" id="text" cols="30" rows="6" placeholder="Subject"></textarea>
             <input type="submit" value="Send" id="sumbit">
           </form>
         </div>
