Form 送信ボタン周辺の設定

--- a/index.html
+++ b/index.html
@@ -285,8 +285,10 @@
             <input type="email" name="emailAddress" id="email" required="true" placeholder="e-mail"><br>
             <label for="text">Subject</label>
             <textarea name="entry.106218465" id="text" cols="30" rows="6" placeholder="Subject"></textarea>
-            <input type="submit" value="Send" id="sumbit">
+            <input type="submit" value="Send" id="sumbit" class="submit-btn">
           </form>
+          <p class="end-message text-dark">Thanks for getting in touch with me</p>
+          <p class="false-message text-dark">Failed to send a message</p>
         </div>
       </div>
         </div>
@@ -310,6 +312,7 @@
     <script src="./scroll-top.js"></script>
     <script src="./scroll-show.js"></script>
     <script src="./show-popup.js"></script>
+    <script src="./form.js"></script>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="/__/firebase/7.14.2/firebase-app.js"></script>
 
