PythonからWordPressに表示変更

--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
                   <p class="skill-text">Websiteにアニメーションを付けて、リッチなサイトにします。jQueryも扱うことが可能です。</p>
                 </div>
                 <div class="skill">
-                  <h4 class="skill-title display-4 mb-5">Python</h4>
-                  <div class="skill-img mb-5"><img src="./portfolio/python (1).png" alt=""></div>
-                  <p class="skill-text">Pythonを使って業務の自動化を行うことが可能です。<br>
-                  データスクレイピングによりデータの収集も致します。</p>
+                  <h4 class="skill-title display-4 mb-5">WordPress</h4>
+                  <div class="skill-img mb-5"><img src="./portfolio/wordpress.png" alt=""></div>
+                  <p class="skill-text">WordPressでWebSiteの制作を致します。<br>
+                  </p>
                 </div>
                 <div class="skill">
                   <h4 class="skill-title display-4 mb-5">ExcelVBA</h4>
