--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <div class="skill">
                   <h4 class="skill-title display-4 mb-5">WordPress</h4>
                   <div class="skill-img mb-5"><img src="./portfolio/wordpress.png" alt=""></div>
-                  <p class="skill-text">WordPressでWebSiteの制作を致します。<br>
+                  <p class="skill-text">WordPressでWebSiteの制作を致します。ドメインやレンタルサーバーの取得も行います。<br>
                   </p>
                 </div>
                 <div class="skill">
