--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
             <p class="mt-4 text-center">Genki Hoshino</p>
             <p class="mb-4 text-center">E-mail : fzny726@gmail.com</p>
             <div class="sns">
-              <div class="twitter" ><a href="https://twitter.com/jimengineer02" style="color: black;"><i class="fab fa-twitter fa-3x" style="cursor: poiner;"></i></a></div>
+              <div class="twitter" ><a href="https://twitter.com/gengorooe" style="color: black;"><i class="fab fa-twitter fa-3x" style="cursor: poiner;"></i></a></div>
               <div class="instagram"><a href="https://www.instagram.com/hoshi_genm/" style="color: black;"><i class="fab fa-instagram fa-3x"  style="cursor: poiner;"></i></a></div>
             </div>
           </div>
